feat: implement list fetching of created user contents
